--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -304,6 +304,8 @@
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\static\MauXuat01.PNG" />
+    <Content Include="Content\static\MauXuat02.PNG" />
     <Content Include="Content\StylesAdminLogin.css" />
     <Content Include="Content\styles.css" />
     <Content Include="Content\toastr.css" />
@@ -393,14 +395,10 @@
     <Content Include="Areas\Admin\Views\AdminAuth\Register.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\Dkdttnk.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtHocBa.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtHocBa_hs_view.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqDgnl.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqDgnl_hs_view.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtKQTthpt.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtKQTthpt_hs_view.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Dkxtth.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtTongHop.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtTt.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtTt_hs_view.cshtml" />
     <Content Include="Areas\Admin\Views\DoiTuongs\Create.cshtml" />
     <Content Include="Areas\Admin\Views\DoiTuongs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\DoiTuongs\Index.cshtml" />
@@ -481,11 +479,7 @@
     <Content Include="Areas\Admin\Views\TruongLienCaps\DetailsTh.cshtml" />
     <Content Include="Areas\Admin\Views\TruongLienCaps\DeleteTh.cshtml" />
     <Content Include="Areas\Admin\Views\TruongLienCaps\EditTh.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqDgnl_hs_view_OK.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtKQTthpt_hs_viewOK.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtHocBa_hs_viewOK.cshtml" />
     <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqCcnn.cshtml" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqCcnn_hs_view.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\DsHvDangKy_Update.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\AdminUpdateHocVien.cshtml" />
     <Content Include="Areas\Admin\Views\HocVienDangKys\AdminCreateHocVien.cshtml" />
@@ -496,6 +490,10 @@
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt3.cshtml" />
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt4.cshtml" />
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt5.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtKQTthpt_hs_view.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtHocBa_hs_view.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtTt_hs_view.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\DkxtkqKhac_hs_view.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -509,24 +507,6 @@
     <Content Include="Scripts\libs_font-awesome_6.1.1_js_all.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\scripts.js" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.bundle.js" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.bundle.min.js" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.esm.js" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.esm.min.js" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.js" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.min.js" />
-    <None Include="Scripts\ScriptsOLD\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery-3.4.1.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery-3.4.1.min.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery-3.4.1.slim.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery-3.4.1.slim.min.js" />
-    <None Include="Scripts\ScriptsOLD\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery.validate.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery.validate.min.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\ScriptsOLD\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\ScriptsOLD\modernizr-2.8.3.js" />
-    <Content Include="Scripts\ScriptsOLD\scripts.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Uploads\DKDTNangKhieuFile\1_20230711_111523_2.jpg" />
@@ -790,14 +770,6 @@
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.bundle.js.map" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.bundle.min.js.map" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.esm.js.map" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.esm.min.js.map" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.js.map" />
-    <Content Include="Scripts\ScriptsOLD\bootstrap.min.js.map" />
-    <Content Include="Scripts\ScriptsOLD\jquery-3.4.1.min.map" />
-    <Content Include="Scripts\ScriptsOLD\jquery-3.4.1.slim.min.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
