--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -761,6 +761,7 @@
     <Content Include="Views\DangKyXetTuyenKhac\IeltsEdit - Copy.cshtml" />
     <Content Include="Views\DangKyXetTuyenKhac\Ielts - Copy %282%29.cshtml" />
     <Content Include="Views\DangKyXetTuyens\Dkxthocba - Copy.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\Dkdtnk - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
