--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -456,7 +456,7 @@
     <Content Include="Areas\Admin\Views\Xas\Index.cshtml" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Content\static\export-66-bieu-mau-thi-nk.docx" />
-    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Dkdttnk_hs_view.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Dkdttnk_hs_view06.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAuth\Login1.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout_Admin_Master.cshtml" />
     <Content Include="Areas\Admin\Views\NganhMasters\Create.cshtml" />
@@ -509,6 +509,7 @@
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt3.cshtml" />
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt4.cshtml" />
     <Content Include="Areas\Admin\Views\TongHopSoLieuDKXTs\TheoDoiNopHoSoDetailPt5.cshtml" />
+    <Content Include="Areas\Admin\Views\DangKyXetTuyens\Dkdttnk_hs_view.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -760,11 +761,10 @@
     <Content Include="Views\DangKyXetTuyenThang\Edit.cshtml" />
     <Content Include="Views\LePhiXetTuyens\QLNopLePhi.cshtml" />
     <Content Include="Views\DangKyXetTuyens\Dkdtnk.cshtml" />
-    <Content Include="Views\DangKyXetTuyenKhac\Ielts - Copy.cshtml" />
     <Content Include="Views\DangKyXetTuyenKhac\IeltsEdit - Copy.cshtml" />
-    <Content Include="Views\DangKyXetTuyenKhac\Ielts - Copy %282%29.cshtml" />
-    <Content Include="Views\DangKyXetTuyens\Dkxthocba - Copy.cshtml" />
     <Content Include="Views\DangKyXetTuyens\Dkdtnk - Copy.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\DkxthocbaEdit - Copy.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\DkxtthptqgEdit - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
