--- a/HDU_AppXetTuyen.csproj
+++ b/HDU_AppXetTuyen.csproj
@@ -730,10 +730,10 @@
     <Content Include="Uploads\LienCapTieuHoc\GiayKhaiSinh\2_133330916848989651_vd.pdf" />
     <Content Include="Views\ThiSinhDangKies\Edit.cshtml" />
     <Content Include="Views\ThiSinhDangKies\Index.cshtml" />
-    <Content Include="Views\DangKyXetTuyens\Dkxthocba.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\DkxthocbaOLD.cshtml" />
     <Content Include="Views\DangKyXetTuyens\Dkxtthptqg.cshtml" />
-    <Content Include="Views\DangKyXetTuyenKhac\Ielts.cshtml" />
-    <Content Include="Views\DangKyXetTuyenThang\Index.cshtml" />
+    <Content Include="Views\DangKyXetTuyenKhac\IeltsOld01.cshtml" />
+    <Content Include="Views\DangKyXetTuyenThang\IndexOLD.cshtml" />
     <Content Include="Views\LienCapTHCS\ConfirmInfomation.cshtml" />
     <Content Include="Views\LienCapTHCS\Create.cshtml" />
     <Content Include="Views\LienCapTHCS\index.cshtml" />
@@ -772,10 +772,16 @@
     <Content Include="Views\DangKyXetTuyenKhac\DanhGiaDetail.cshtml" />
     <Content Include="Views\DangKyXetTuyens\DkxtthptqgOK.cshtml" />
     <Content Include="Views\DangKyXetTuyens\DkxtthptqgEditOK.cshtml" />
-    <Content Include="Views\DangKyXetTuyenKhac\DanhGia - Copy.cshtml" />
+    <Content Include="Views\DangKyXetTuyenKhac\DanhGiaOLD.cshtml" />
     <Content Include="Views\DangKyXetTuyens\DkxthocbaOK.cshtml" />
     <Content Include="Views\DangKyXetTuyens\DkxthocbaEditOK.cshtml" />
-    <Content Include="Views\DangKyXetTuyens\DkxthocbaTestDiv.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\Dkxthocba.cshtml" />
+    <Content Include="Views\DangKyXetTuyens\DkxtthptqgOLD.cshtml" />
+    <Content Include="Views\DangKyXetTuyenThang\Index.cshtml" />
+    <Content Include="Views\DangKyXetTuyenKhac\DanhGia - Copy %282%29.cshtml" />
+    <Content Include="Views\DangKyXetTuyenKhac\IeltsOLD.cshtml" />
+    <Content Include="Views\DangKyXetTuyenKhac\DanhGiaOLD2.cshtml" />
+    <Content Include="Views\DangKyXetTuyenKhac\Ielts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
